--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ipfs"]
 	path = ipfs
 	url = https://github.com/akhampariya/ipfs
-[submodule "docs"]
-	path = docs
+[submodule "blockchainpaper"]
+	path = blockchainpaper
 	url = https://github.com/akhampariya/blockchainpaper
